add indexField in ElasticOutputConfig