@@ -1,6 +1,6 @@
 JMMetric
 ========
-JMMetric is an open source to prepare data for analytics, Java Reactive Stream Data Processing Framework that ingests various format data, transforms it to FieldMap (flat key map), and then use it to build Semi-Structured Data And Metric.
+JMMetric is an open source to prepare data for analytics, Java Reactive Stream Data Processing Framework that ingests various format data from a multitude of inputs, transforms it into FieldMap (Semi-Structured Data with flat key), sends it to outputs and then use it to make your Metric.
 
 ## Useful Features  :
 * **Flow Package ([Reactive Programming with JDK 9 Flow API](https://community.oracle.com/docs/DOC-1006738) Utility, [Reactive Streams 
@@ -17,7 +17,7 @@ Compatibility**
 `STDOUT` `FILE` `KAFKA` `ELASTICSEARCH`
 
 ## version
-[![Maven Central](https://maven-badges.herokuapp.com/maven-central/kr.jmlab/jm-metric/badge.svg)](http://search.maven.org/#artifactdetails%7Ckr.jmlab%7Cjm-metric%7C0.2.0%7Cjar)
+[![Maven Central](https://maven-badges.herokuapp.com/maven-central/kr.jmlab/jm-metric/badge.svg)](http://search.maven.org/#artifactdetails%7Ckr.jmlab%7Cjm-metric%7C0.2.1%7Cjar)
 
 ## Prerequisites:
 * Java 9 or later
@@ -27,14 +27,14 @@ Compatibility**
 ## Usage
 Gradle:
 ```groovy
-compile 'kr.jmlab:jm-metric:0.2.0'
+compile 'kr.jmlab:jm-metric:0.2.1'
 ```
 Maven:
 ```xml
 <dependency>
     <groupId>kr.jmlab</groupId>
     <artifactId>jm-metric</artifactId>
-    <version>0.2.0</version>
+    <version>0.2.1</version>
 </dependency>
 ```
 
@@ -43,32 +43,32 @@ Checkout the source code:
 ```cmd
 git clone https://github.com/JM-Lab/jm-metric.git
 cd jm-metric
-git checkout -b 0.2.0 origin/0.2.0
-mvn install
+git checkout -b 0.2.1 origin/0.2.1
+mvn install -Dmaven.test.skip=true
 ```
 ### For Example :
 - **[HelloJMMetric.jsh](https://github.com/JM-Lab/jm-metric/tree/master/jsh/HelloJMMetric.jsh)**
 ```cmd
-jshell --class-path bin/jm-metric.jar -startup jsh/HelloJMMetric.jsh
+jshell --module-path bin --add-modules jm.metric -startup jsh/HelloJMMetric.jsh
 ```
 - [Interact with JShell](https://docs.oracle.com/javase/9/jshell/)
 ```jshell
-/env --class-path bin/jm-metric.jar
+/env --module-path bin --add-modules jm.metric
 
 import kr.jm.metric.JMMetric;
-JMMetric jmMetric = new JMMetric().testInput("Hello JMMetric !!!");
+JMMetric jmMetric = new JMMetric().start().testInput("Hello JMMetric !!!");
 ```
 > Result
 ```json
-{"meta.inputId":"TestInput","meta.processTimestamp":"2018-08-13T07:46:58.347Z","rawData":"Hello JMMetric !!!"}
+{"meta.inputId":"TestInput","meta.processTimestamp":"2018-11-06T07:30:20.345Z","rawData":"Hello JMMetric !!!"}
 ```
 ```jshell
 import kr.jm.metric.config.mutator.ApacheAccessLogMutatorConfig;
-jmMetric = new JMMetric(jmMetric.getJmMetricConfigManager().insertMutatorConfig(new ApacheAccessLogMutatorConfig("CustomApacheLog", "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\" %D")), "CustomApacheLog").testInput("223.62.219.101 - - [08/Jun/2015:16:59:59 +0900] \"POST /app/5315 HTTP/1.1\" 200 1100 \"-\" \"Dalvik/1.6.0 (Linux; U; Android 4.4.2; SHV-E330S Build/KOT49H)\" 45195");
+jmMetric = new JMMetric(jmMetric.getJmMetricConfigManager().insertMutatorConfig(new ApacheAccessLogMutatorConfig("CustomApacheLog", "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\" %D")), "CustomApacheLog").start().testInput("223.62.219.101 - - [08/Jun/2015:16:59:59 +0900] \"POST /app/5315 HTTP/1.1\" 200 1100 \"-\" \"Dalvik/1.6.0 (Linux; U; Android 4.4.2; SHV-E330S Build/KOT49H)\" 45195");
 ```
 > Result
 ```json
-{"remoteUser":"-","requestTime":"45195","request":"POST /app/5315 HTTP/1.1","referer":"-","meta.inputId":"TestInput","meta.processTimestamp":"2018-08-13T07:48:15.148Z","receivedTimestamp":"08/Jun/2015:16:59:59 +0900","remoteHost":"223.62.219.101","sizeByte":"1100","userAgent":"Dalvik/1.6.0 (Linux; U; Android 4.4.2; SHV-E330S Build/KOT49H)","remoteLogName":"-","statusCode":"200"}
+{"remoteUser":"-","requestTime":"45195","request":"POST /app/5315 HTTP/1.1","referer":"-","meta.inputId":"TestInput","meta.processTimestamp":"2018-11-06T07:57:47.114Z","receivedTimestamp":"08/Jun/2015:16:59:59 +0900","remoteHost":"223.62.219.101","sizeByte":"1100","userAgent":"Dalvik/1.6.0 (Linux; U; Android 4.4.2; SHV-E330S Build/KOT49H)","remoteLogName":"-","statusCode":"200"}
 ```
 ## LICENSE
 Copyright 2018 Jemin Huh (JM)
